# async-defer

./: Cargo.toml  LICENSE  README.md
src/: async_fn.rs  caller.rs  defer.rs  defer_mut.rs  dispatcher.rs  lib.rs  locks.rs  summoner.rs
